istio/rust-microservice.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: rust-microservice
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: rust-microservice
    spec:
      containers:
      - image: quay.io/woodsmur/rust-microservice
        imagePullPolicy: Always
        name: rust-microservice
        ports:
        - containerPort: 8000
