istio/rust-microservice-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: rust-microservice
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 8000
  selector:
    app: rust-microservice
